Add scene outliner component.
Features:
- new font icons and loader infrastructure for fonts/images/files
- three point light composite gl-hybrid

--- a/src/gl/gl-scene-outliner.styl
+++ b/src/gl/gl-scene-outliner.styl
@@ -1,4 +1,5 @@
 @require '~style/mixins.styl'
+@require '~font-awesome/css/font-awesome.css'
 
 *, *:before, *:after {
   box-sizing: border-box
@@ -14,4 +15,19 @@
 
 	color: #ddd
 	font-family: 'Consolas', monospace
+	font-size: 0.85rem
+	color: #aaa
+	ul {
+		margin: 0
+		padding-left: 12px
+		& > li {
+			padding: 4px
+			flexXY(start, center)
+		}
+	}
+
+	i.fa {
+		font-family: 'FontAwesome'
+		width: 1.8rem
+	}
 }
