--- a/src/gl/gl-scene-outliner.styl
+++ b/src/gl/gl-scene-outliner.styl
@@ -1,33 +1,75 @@
 @require '~style/mixins.styl'
 @require '~font-awesome/css/font-awesome.css'
+@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css)
 
 *, *:before, *:after {
   box-sizing: border-box
 }
 
+@supports (font-variation-settings: normal) {
+	code { font-family: 'Fira Code VF', monospace; }
+}
+
 .scene-outliner {
 	absPos(0, 0, auto, auto)
-	wh(auto, 100%)
+	wh(auto, auto)
 	min-width: 64px
 	max-width: 340px
-	padding: 64px 16px 32px 16px
-	border: 1px solid #ddd
+	padding: 8px 8px 32px 8px
+	border-bottom-left-radius: 25px
+	background: rgba(0, 0, 0, 0.4)
+	backdrop-filter: blur(5px)
 
 	color: #ddd
-	font-family: 'Consolas', monospace
-	font-size: 0.85rem
+	font-family: 'Fira Code', monospace
+	font-size: 0.8rem
 	color: #aaa
+
+	header {
+		padding-bottom: 8px
+		border-bottom: 1px solid #333
+		margin-bottom: 16px
+		flexXY(flex-end, center)
+
+		i.fa {
+			circle(1.3rem)
+			font-size: 1rem
+			color: #777
+			border: 2px solid #333
+			flexXY(center)
+		}
+	}
+
+	div.camera-asset {
+		padding: 4px
+		padding-left: 16px
+	}
 	ul {
 		margin: 0
 		padding-left: 12px
+		list-style: none
 		& > li {
 			padding: 4px
-			flexXY(start, center)
 		}
 	}
 
 	i.fa {
 		font-family: 'FontAwesome'
+		font-size: 1rem
 		width: 1.8rem
+		cursor: pointer
+		&:hover {
+			color: #87b3ff
+		}
+	}
+}
+
+div.camera-asset, ul > li.asset {
+	flexXY(start, flex-end)
+	span.name {
+		color: #ddd
+	}
+	span.type {
+		font-size: 0.7rem
 	}
 }
